# Inny-Stevens

./: LICENSE  README.md
portfolio/: .env.example  README.md  index.html
portfolio/api/: contact.js
portfolio/src/: App.css  App.jsx  index.css
portfolio/src/components/: CareerEvolution.jsx  ContactForm.jsx
portfolio/src/data/: content.js
propsocial-acc/: README.md
propsocial-acc/backend/: Cargo.toml
propsocial-acc/backend/src/: auth.rs  error.rs  main.rs  policy.rs  state.rs
propsocial-acc/backend/src/modules/: forensics.rs  grc.rs  health.rs  intelligence.rs  mod.rs  support.rs
propsocial-acc/docs/: architecture.md  compliance.md  data-model.md
propsocial-acc/frontend/: index.html  package.json  vite.config.ts
propsocial-acc/frontend/src/: App.tsx  data.ts  styles.css
